crates/nirvash-macros/tests/fixtures/code_tests_legacy_context.stderr
error: context = ... is no longer supported; declare Context and context() on CodeConformanceSpec
   --> tests/fixtures/code_tests_legacy_context.rs:107:49
    |
107 | #[code_tests(spec = Spec, init = initial_state, context = tests::driver_context)]
    |                                                 ^^^^^^^
